  If `numpy` cannot be imported it falls back to  `robjects.default_converter`.
- The definition of `Rcomplex` from R's C-API was updated to match
  the definition in recent R release (>= 4.3) when rpy2 is in "API mode".
  This does not work with the "ABI mode" though, and the legacy
  definition of `Rcomplex` is still used with it.


Bugs fixed
----------

- Fix case of `zoneinfo.ZoneInfo` object missing the attribute `zone`.
  The attribute `key` is used instead. This fixes issue #1079.

- The constructor for :class:`rpy2.robjects.lib.ggplot2` did not
  play well with conversion rules in :mod:`rpy2.robjects.pandas2ri`.
  The default conversion rules are now forced (issue #1116).

- The documentation for the notebook "magic" `Rdevice` was not
  displayed in the module-level docstring for :mod:`rpy2.ipython.rmagic`.


Release 3.5.17
==============

New features
------------

- `geom_curve` added to the `ggplot2` mapping.


Release 3.5.16
==============

Changes
-------

- After the embedded R is initialized the SIGINT handler is set to
  Python default handler (instead of a custom handler raising
  :class:`KeyboardInterrupt`).

Bugs fixed
----------

- :meth:`rpy2.robjects.methods.getclassdef` was not reporting
  clearly errors due unspecified package name or missing class
  definition in within the package namespace specified.

- The display of SVG figures in jupyter notebooks is fixed.
  there was a typo in the code.


Release 3.5.15
==============

New features
------------

- Checking C compiling against the R shared library can be skipped with
  the environment variable `RPY2_API_FORCE` set to `True`.

- The rinterface-level class :class:`rpy2.rinterface.SexpExtPtr` now
  also has an robject-level wrapper :class:`rpy2.robjects.ExternalPointer`,
  and a representation for class name-based conversion rules.


Bugs fixed
----------

- Fixed notebook representation of R named arrays or vectors when
  conversion rules might interfere (issue #1047).
