@@ -75,12 +75,13 @@ jobs:
       run: |
         ${{ env.VENV_ACTIVATE }}
         echo "With requirements for rpy2-rinterface."
-        python3 -m pip install --pre ${{ env.RPY2_RINTERFACE_WHL_DIST }}'[test_minimal]'
-        echo "With dev for rpy2-rinterface."
-        python3 -m pip install --pre ${{ env.RPY2_ROBJECTS_WHL_DIST }}'[test_minimal]'
+        python3 -m pip install --pre ${{ env.RPY2_RINTERFACE_WHL_DIST }}'[test]'
         ${{ env.R_LIBRARY }}
         python -c 'from rpy2.rinterface_lib import openrlib; print(openrlib.cffi_mode)'
-        bash -e ./scripts/run_test_min_deps.sh
+        bash -e ./scripts/run_test_rinterface_min_deps.sh
+        echo "With dev for rpy2-robjects."
+        python3 -m pip install --pre ${{ env.RPY2_ROBJECTS_WHL_DIST }}'[test_minimal]'
+        bash -e ./scripts/run_test_robjects_min_deps.sh
     - name: Test with numpy
       run: |
         ${{ env.VENV_ACTIVATE }}
