@@ -20,28 +20,8 @@ class ThreadWithExceptions(Thread):
                     reason='Can only be tested before R is initialized.')
 @pytest.mark.skipif(os.name == 'nt',
                     reason='Crashes Python on Windows.')
-def notest_threading__initr():
+def test_threading__initr():
     thread = ThreadWithExceptions(target=rpy2.rinterface_lib.embedded._initr)
     thread.start()
     thread.join()
-    assert not thread.exception
-
-
-@pytest.mark.skipif(rpy2.rinterface_lib.embedded.rpy2_embeddedR_isinitialized,
-                    reason='Can only be tested before R is initialized.')
-@pytest.mark.skipif(os.name == 'nt',
-                    reason='Crashes Python on Windows.')
-def test_threading_initr_simple():
-    # This initialization performs more post-initialization setup compared to _initr.
-    # It will check whether R is initialized from the main thread.
-    thread = ThreadWithExceptions(target=rpy2.rinterface.initr_simple)
-    with pytest.warns(
-        UserWarning,
-        match=(
-            r'R is not initialized by the main thread.\n'
-            r'\W+Its taking over SIGINT cannot be reversed here.+'
-        )
-    ):
-        thread.start()
-        thread.join()
     assert not thread.exception
