@@ -485,7 +485,7 @@ class R(object):
 
     def __new__(cls):
         if cls._instance is None:
-            rinterface.initr_simple()
+            rinterface.initr()
             cls._instance = object.__new__(cls)
         return cls._instance
 
